WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239421
Fix a deadlock in VMTraps.
https://bugs.webkit.org/show_bug.cgi?id=239421
Summary
Fix a deadlock in VMTraps.
Mark Lam
Reported
2022-04-16 10:36:45 PDT
There is an inversion in lock ordering between VMTraps and the Sampling Profiler.
Attachments
[fast-cq] proposed patch.
(3.80 KB, patch)
2022-04-16 11:11 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-16 10:37:08 PDT
<
rdar://problem/91851592
>
Mark Lam
Comment 2
2022-04-16 11:11:43 PDT
Created
attachment 457751
[details]
[fast-cq] proposed patch.
Michael Saboff
Comment 3
2022-04-16 14:08:53 PDT
Comment on
attachment 457751
[details]
[fast-cq] proposed patch. r=me
Mark Lam
Comment 4
2022-04-16 21:20:41 PDT
Comment on
attachment 457751
[details]
[fast-cq] proposed patch. Thanks for the review. Landing now.
EWS
Comment 5
2022-04-16 21:23:30 PDT
Committed
r292946
(
249711@main
): <
https://commits.webkit.org/249711@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457751
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug